добавляет css разметку portfolio.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <a href="" type="button" class="hero-link">Заказать услугу</a>
             </div>
-            
         </section>
     
     <!--Преимущества-->
@@ -127,12 +126,18 @@
 <!--футер-->
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo logo-footer"><span class="logo-accent">Web</span>Studio</a>
+            <a href="./index.html" class="logo logo-footer "><span class="logo-accent">Web</span>Studio</a>
             <address>
-                <ul class="list">
-                    <li class="adress">Киев, пр-т Леси Украинки, 26</li>
-                    <li class="contacts">info@example.com</li>
-                    <li class="contacts">+38 099 111 11 11</li>
+                <ul class="adress-list">
+                    <li class="contacts item">
+                    <a href=""  class="adress link">Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="contacts item">
+                    <a href=""  class="contacts link">info@example.com</a>
+                    </li>
+                    <li class="contacts item">
+                    <a href=""  class="contacts link">+38 099 111 11 11</a>
+                    </li>
                 </ul>
             </address>
         </div>
