добавляет к классу "item" list-syle: none/ добавляет класс в последний тег "img" на странице портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -186,7 +186,7 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="work-link link">
-                        <img src="./images/img16.jpg" alt="офорлмение дизайна Growing Business" width="370" height="294">
+                        <img src="./images/img16.jpg" class="portfolio-img" alt="офорлмение дизайна Growing Business" width="370" height="294">
                         <div class="card-content">
                         <h2 class="work-header">Growing Business</h2>
                         <p class="work-paragrapf">Приложение</p>
